src/qir/snapshots/hugr_qir__qir__qsystem_ext__test__emit@pre-mem2reg@llvm14_tket.qsystem.ZZPhase.snap
---
source: src/qir/qsystem_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

%Qubit = type opaque

define private { %Qubit*, %Qubit* } @_hl.main.1(%Qubit* %0, %Qubit* %1, double %2) {
alloca_block:
  %"0" = alloca %Qubit*, align 8
  %"1" = alloca %Qubit*, align 8
  %"2_0" = alloca %Qubit*, align 8
  %"2_1" = alloca %Qubit*, align 8
  %"2_2" = alloca double, align 8
  %"4_0" = alloca %Qubit*, align 8
  %"4_1" = alloca %Qubit*, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store %Qubit* %0, %Qubit** %"2_0", align 8
  store %Qubit* %1, %Qubit** %"2_1", align 8
  store double %2, double* %"2_2", align 8
  %"2_01" = load %Qubit*, %Qubit** %"2_0", align 8
  %"2_12" = load %Qubit*, %Qubit** %"2_1", align 8
  %"2_23" = load double, double* %"2_2", align 8
  call void @__quantum__qis__rzz__body(double %"2_23", %Qubit* %"2_01", %Qubit* %"2_12")
  store %Qubit* %"2_01", %Qubit** %"4_0", align 8
  store %Qubit* %"2_12", %Qubit** %"4_1", align 8
  %"4_04" = load %Qubit*, %Qubit** %"4_0", align 8
  %"4_15" = load %Qubit*, %Qubit** %"4_1", align 8
  store %Qubit* %"4_04", %Qubit** %"0", align 8
  store %Qubit* %"4_15", %Qubit** %"1", align 8
  %"06" = load %Qubit*, %Qubit** %"0", align 8
  %"17" = load %Qubit*, %Qubit** %"1", align 8
  %mrv = insertvalue { %Qubit*, %Qubit* } undef, %Qubit* %"06", 0
  %mrv8 = insertvalue { %Qubit*, %Qubit* } %mrv, %Qubit* %"17", 1
  ret { %Qubit*, %Qubit* } %mrv8
}

declare void @__quantum__qis__rzz__body(double, %Qubit*, %Qubit*)
